--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,3 @@
-<h1>Articles#new</h1>
-<p>Find me in app/views/articles/new.html.erb</p>
-
 <h1>Create a new article</h1>
 
 <%= form_with scope: :article, url: create_article_path, local: true do |f|%>
@@ -28,3 +25,4 @@
     </p>
 
 <% end %>
+<%= link_to "Return to article listing", articles_path() %>
