--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
+<h1>Article </strong><%= @article.id %></p></h1>
+
+<p><strong>Title: </strong><%= @article.title %></p>
+<p><strong>Description: </strong><%= @article.description %></p>  
+
+<%= link_to "Edit", edit_article_path(@article) %>
+<%= link_to "Delete", show_article_path(@article), method: :delete %>
+<%= link_to "Return to article listing", articles_path() %>
